--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "html-react-parser": "^0.14.2",
     "immer": "^8.0.1",
     "moment": "^2.29.1",
-    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
@@ -41,6 +40,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.49.9",
     "sweetalert": "^2.1.2",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
